--- a/config/development.yaml
+++ b/config/development.yaml
@@ -5,7 +5,7 @@ mysql:
   host: 127.0.0.1
   port: 3306
   config: charset=utf8mb4&parseTime=True&loc=Local
-  db-name: go_react_forum
+  dbname: go_react_forum
   username: root
   password: root
   max-idle-conns: 10
